--- a/public/css/main.css
+++ b/public/css/main.css
@@ -46,6 +46,7 @@ input:focus{outline:0;}
     margin-bottom: 10px;
 }
 .content .uk-card-default{box-shadow: none;border-radius: 10px;border: 3px solid #c1e82a;}
+.content .uk-card-default img {max-height:150px;}
 .uk-card-body {padding: 20px 20px;}
 .price{font-size: 22px;}
 .price span{font-weight:bold;}
