--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -18,7 +18,8 @@ nav ul.main-ul>li {
     border-left: 1px solid #9da0b1;
     text-align: center;
     box-sizing: border-box;
-    font-size: 0.9rem;
+   font-size: 1rem;
+    font-weight: bold;
     line-height: 1.1rem;
     vertical-align: middle;
 	
