--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -24,7 +24,14 @@ a:hover{
 }
 .head-middle{margin-top:20px;}
 .call a{color: #d5fb43; font-size: 18px;}
-.green{color: #c1e82a;}
+.green{    color: #77a848;
+    
+}
+#footer .green {
+    color: #c1e84f;
+}
+.head-middle  .green
+{font-weight: bold;}
 .dark-green{color: #77a848;}
 .cart a{color: #fff;text-transform: uppercase;}
 .links a{padding:10px 5px;height: 30px;display: inline-block;}
@@ -54,8 +61,11 @@ input:focus{outline:0;}
 .content .uk-card-default{box-shadow: none;border-radius: 10px;border: 3px solid #c1e82a;}
 .content .uk-card-default img {max-height:150px;}
 .uk-card-body {padding: 20px 20px;}
-.price{font-size: 22px;}
-.price span{font-weight:bold;}
+.price,.price-sale{font-size: 22px;    margin: 0;}
+.price-sale{color: #e01212;}
+.price span,.price-sale span{font-weight:bold;}
+.price span del{}
+.add-cart{    margin-top: 20px;}
 .add-cart p{
 	background: #4b6b4c;
     background: -moz-linear-gradient(left, #4b6b4c 1%, #77a848 100%);
@@ -84,11 +94,15 @@ input:focus{outline:0;}
 .last.uk-grid>* {
    
 }
+.uk-card-title {
+    font-size: 1.2rem;
+    line-height: 1.2;
+}
 .uk-card-title a {
     color: #171717;
     text-decoration: underline;
     cursor: pointer;
-    font-size: 21px;
+   
 }
 .left-col .uk-card-default {
     background: #fff;
@@ -168,3 +182,20 @@ text-transform: none;
     padding-bottom: 10px;
 	}
 .sort .uk-grid div:first-child{border-left: none;}
+.uk-cover-background {background-size: 100%;} 
+@media (max-width: 1024px){
+.uk-container {
+    padding-left: 10px;
+    padding-right: 10px;
+}
+nav ul.main-ul>li>a {
+    text-decoration: none;
+    display: table-cell;
+    vertical-align: middle;
+    height: 4rem;
+    padding: 0 .1rem;
+    color: #fff;
+    position: relative;
+    font-size: 11px;
+}
+}
